# intelligent_machine_discovery

./: .gitignore  Cargo.toml  README.md
.custom_shields/: imd.json
.github/: shield_io_updater.yml
.github/workflows/: shield_io_updater.yml
docs/: index.md
src/: args.rs  commands.rs  conf.rs  drives.rs  error.rs  lib.rs  main.rs  newconf.rs  ping.rs  ports.rs  utils.rs  web.rs
src/.custom_shields/: imd.json
