[package]
name = "imd"
version = "1.4.0"
authors = ["Kevin Conley <koins@duck.com>"]
edition = "2021"
description = "A fast discovery tool for CTF-style hacking challenges"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=3.2.17", features = ["cargo"] }
crossterm = ">=0.25.0"
indicatif = ">=0.17.0"
nix = ">=0.24.2"

[profile.release]
lto = true
strip = true