[package]
authors = ["Kevin Conley <koins@duck.com>"]
description = "A discovery tool for CTF-style hacking challenges"
documentation = "https://kmanc.github.io/intelligent_machine_discovery/"
edition = "2021"
license = "MIT"
name = "imd"
repository = "https://github.com/kmanc/intelligent_machine_discovery"
version = "1.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=3.2.17", features = ["cargo"] }
crossterm = ">=0.25.0"
indicatif = ">=0.17.0"
nix = ">=0.24.2"

[profile.release]
lto = true
strip = true
panic = "abort"