[package]
authors = ["Kevin Conley <koins@duck.com>"]
description = "A discovery tool for CTF-style hacking challenges"
documentation = "https://kmanc.github.io/intelligent_machine_discovery/"
edition = "2021"
license = "MIT"
name = "imd"
repository = "https://github.com/kmanc/intelligent_machine_discovery"
version = "2.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=4.0.32", features = ["cargo"] }
crossterm = ">=0.25.0"
indicatif = ">=0.17.2"
nix = ">=0.26.1"

[profile.release]
lto = true
strip = true
panic = "abort"